--- a/istio-install/4-deploy-servicemesh.yaml
+++ b/istio-install/4-deploy-servicemesh.yaml
@@ -5,7 +5,7 @@ metadata:
   name: servicemeshoperator-subscription
   namespace: openshift-operators
 spec:
-  channel: "1.0"
+  channel: stable
   name: servicemeshoperator
   source: redhat-operators
   sourceNamespace: openshift-marketplace
