--- a/bookinfo/demo-1-virtual-service-reviews-v2-partial.yaml
+++ b/bookinfo/demo-1-virtual-service-reviews-v2-partial.yaml
@@ -1,3 +1,4 @@
+# Sends 90% of traffic to reviews-v1 and 10% to reviews-v2
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
