--- a/bookinfo/demo-3-virtual-service-reviews-jason-v2-v3.yaml
+++ b/bookinfo/demo-3-virtual-service-reviews-jason-v2-v3.yaml
@@ -1,3 +1,4 @@
+# Sends users who log in as "jason" to reviews-v3 and everyone else to reviews-v2
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
