--- a/bookinfo/demo-5-virtual-service-reviews-jason-v2-v3-error.yaml
+++ b/bookinfo/demo-5-virtual-service-reviews-jason-v2-v3-error.yaml
@@ -1,3 +1,5 @@
+# Sends users who log in as "jason" to receive a 500 error
+# All other users are sent with 50%/50% split between reviews-v2 and reviews-v3
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
