--- a/bookinfo/demo-5-virtual-service-reviews-jason-v2-v3-error.yaml
+++ b/bookinfo/demo-5-virtual-service-reviews-jason-v2-v3-error.yaml
@@ -21,9 +21,12 @@ spec:
     - destination:
         host: reviews
         subset: v3
-      weight: 50
   - route:
     - destination:
         host: reviews
         subset: v2
+      weight: 50
+    - destination:
+        host: reviews
+        subset: v3
       weight: 50
